<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">DeliveryJT</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="repiteContrasena">Repite contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="recupearContra">Recuperar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="registroExitoso">Registro exitoso</string>
    <string name="continuar">Continuar</string>
    <string name="recuperarCuenta">Recuperar Cuenta</string>
    <string name="textoRecuperarContrasena">Para recuperar tu contraseña coloca tu correo</string>
    <string name="texto_de_prueba">Texto de prueba</string>
    <string name="editar">Editar</string>
    <string name="direccion_por_gps">Direccion por GPS</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="pedir">Pedir</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>